--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -33,7 +33,12 @@
         android:id="@+id/detail_info_fragment"
         android:name="com.example.githubviewer.fragments.DetailInfoFragment"
         tools:layout="@layout/detail_info_fragment">
-
+        <argument
+            android:name="repoId"
+            app:argType="integer"/>
+        <argument
+            android:name="repoName"
+            app:argType="string"/>
         <action
             android:id="@+id/action_back"
             app:destination="@+id/repositories_list_fragment"/>
