add detail info view

--- a/app/src/main/res/layout/detail_info_fragment.xml
+++ b/app/src/main/res/layout/detail_info_fragment.xml
@@ -71,7 +71,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tv_description"
+        android:id="@+id/readMe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
